[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/UI/Settings.gd" type="Script" id=1]
[ext_resource path="res://Scens/Ui/UISettingsCheckbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scens/Ui/UIResolutionSelecter.tscn" type="PackedScene" id=3]
[ext_resource path="res://Font/new_dynamicfont.tres" type="DynamicFont" id=4]
[ext_resource path="res://Sounds/button.wav" type="AudioStream" id=5]
[ext_resource path="res://Font/tinypixel.otf" type="DynamicFontData" id=6]
[ext_resource path="res://Scens/Ui/SoundSettings.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=2]
resource_local_to_scene = true
size = 14
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=1]
resource_local_to_scene = true
size = 14
font_data = ExtResource( 6 )

[node name="UIVideoSettings" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.0
margin_top = -80.0
margin_right = 122.0
margin_bottom = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundSettings" parent="VBoxContainer" instance=ExtResource( 7 )]
margin_right = 234.0
margin_bottom = 36.0

[node name="Label" parent="VBoxContainer/SoundSettings" index="0"]
margin_right = 234.0
custom_fonts/font = SubResource( 2 )

[node name="HSlider" parent="VBoxContainer/SoundSettings" index="1"]
margin_right = 234.0

[node name="UIFullscreenCheckbox" parent="VBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 40.0
margin_right = 234.0
margin_bottom = 64.0
title = "Full Screen"

[node name="UIVsyncCheckbox" parent="VBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 68.0
margin_right = 234.0
margin_bottom = 92.0
title = "VSync"

[node name="UIResolutionSelecter" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_top = 96.0
margin_right = 234.0
margin_bottom = 118.0

[node name="Label" parent="VBoxContainer/UIResolutionSelecter" index="0"]
margin_top = 3.0
margin_right = 84.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 1 )
text = "Resolution"

[node name="OptionButton" parent="VBoxContainer/UIResolutionSelecter" index="1"]
margin_left = 88.0
margin_right = 187.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
text = "640x480"
items = [ "640x480", null, false, 0, null, "1280x720", null, false, 1, null, "1920x1080", null, false, 2, null ]

[node name="Button" type="Button" parent="VBoxContainer"]
margin_top = 122.0
margin_right = 56.0
margin_bottom = 144.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 4 )
text = "Apply"

[node name="ButtonBack" type="Button" parent="VBoxContainer"]
margin_top = 148.0
margin_right = 50.0
margin_bottom = 170.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 4 )
text = "Back"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="change_audio" from="VBoxContainer/SoundSettings" to="." method="_on_SoundSettings_change_audio"]
[connection signal="toggled" from="VBoxContainer/UIFullscreenCheckbox" to="." method="_on_UIFullscreenCheckbox_toggled"]
[connection signal="toggled" from="VBoxContainer/UIVsyncCheckbox" to="." method="_on_UIVsyncCheckbox_toggled"]
[connection signal="resolution_changed" from="VBoxContainer/UIResolutionSelecter" to="." method="_on_UIResolutionSelecter_resolution_changed"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonBack" to="." method="_on_ButtonBack_pressed"]

[editable path="VBoxContainer/SoundSettings"]
[editable path="VBoxContainer/UIResolutionSelecter"]
